# Obsidian-Knowledge-Steward

./: .gitignore  README.md  package-lock.json  项目面试精华手册.md
backend/: README.md  environment.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py  path_semantics.py
backend/app/benchmark/: __init__.py  ask_answer_benchmark.py  ask_answer_benchmark_judge.py  ask_answer_benchmark_preflight.py  ask_answer_benchmark_replay.py  ask_answer_benchmark_scoring.py  ask_answer_benchmark_variants.py  ask_dataset.py  (+7 more)
backend/tests/: test_ask_answer_benchmark.py  test_ask_answer_benchmark_cli.py  test_ask_answer_benchmark_judge.py  test_ask_answer_benchmark_judge_cli.py  test_ask_answer_benchmark_preflight.py  test_ask_answer_benchmark_replay.py  test_ask_answer_benchmark_scoring.py  test_ask_benchmark_candidates.py  test_ask_benchmark_dataset.py  test_ask_benchmark_review.py  test_ask_benchmark_validation.py  test_ask_guardrails.py  test_ask_retrieval_benchmark.py  test_ask_retrieval_cli.py  test_ask_retrieval_metrics.py  test_ask_retrieval_modes.py  test_ask_retrieval_preflight.py  test_ask_workflow.py  test_context_assembly.py  test_cors.py  test_digest_workflow.py  test_eval_runner.py  test_faithfulness.py  test_indexing_ingest.py  test_indexing_store.py  test_ingest_workflow.py  test_path_contract_migration.py  test_path_semantics.py  test_proposal_validation.py  test_resume_workflow.py  test_retrieval_embeddings.py  test_retrieval_fts.py  test_retrieval_hybrid.py  test_retrieval_vector.py  test_tool_registry.py  test_workflow_invoke_contract.py
eval/: README.md  (+1 more)
(+1044 files in other folders)
