[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-steward-backend"
version = "0.1.0"
description = "Backend baseline for Obsidian Knowledge Steward"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "langgraph",
  "langgraph-checkpoint-sqlite",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
